--- a/public/src/index.html
+++ b/public/src/index.html
@@ -154,11 +154,11 @@
       </figure>
       <article class="content__content">
         <h2 class="content__title">Technologies</h2>
-        <p class="content__text">I specialise in creating performant, responsive and accessible websites and
+        <p class="content__text">I specialise in creating performant, responsive, secure and accessible websites and
           applications. </p>
-        <p class="content__text">Technologies and I'm comfortable working with include but are not limited to HTML5,
+        <p class="content__text">Technologies I'm comfortable working with include but are not limited to HTML5,
           CSS3, Sass,
-          JavaScript, React, PHP, MySQL, Docker, NPM, Git, Gulp, Webpack, and the ability to learn others.</p>
+          JavaScript, React, PHP, MySQL, Docker, NPM, Git, Gulp, Webpack and the ability to learn others.</p>
       </article>
     </section>
 
@@ -170,12 +170,11 @@
       <article class="content__content">
         <h2 class="content__title">Experience</h2>
         <p class="content__text">I have experience working as an industry professional and am an excellent communicator
-          capable of working in teams
+          having in teams
           with knowledge of Windows
-          and Linux, FTP, SSH, servers, hosting, domains, DNS and APIs.</p>
-        <p class="content__text">I am also practiced using industry leading applications such as Slack, Asana,
-          1Password, Adobe XD, Visual
-          Studio Code, Postman and more.</p>
+          and Linux, FTP, SSH, servers, hosting, domains, DNS, APIs and more.</p>
+        <p class="content__text">I am also practiced in using industry leading applications such as Slack, Asana, Visual
+          Studio Code, Adobe XD, Postman, 1Password and more.</p>
       </article>
     </section>
 
