--- a/public/src/index.html
+++ b/public/src/index.html
@@ -81,8 +81,7 @@
 
     <hr class="separator">
 
-    <section class="skills section section--first page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-offset="500">
+    <section class="skills section page__section" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="500">
       <article class="skills__inner container">
         <h2 class="skills__title">Expertise</h2>
 
@@ -185,7 +184,7 @@
 
     <hr class="separator">
 
-    <section class="contact container section section--last page__section" data-aos="fade-up" data-aos-duration="2000"
+    <section class="contact container section page__section" data-aos="fade-up" data-aos-duration="2000"
       data-aos-offset="1000">
       <article>
         <h2 class="contact__title">Let's talk</h2>
