Adding better animation

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -81,7 +81,7 @@
 
     <hr class="separator">
 
-    <section class="skills section page__section" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="500">
+    <section class="skills section page__section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
       <article class="skills__inner container">
         <h2 class="skills__title">Expertise</h2>
 
@@ -117,7 +117,7 @@
     <hr class="separator">
 
     <section class="projects section container page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-offset="500">
+      data-aos-delay="1000">
       <article class="project">
         <a href="#!" class="project__link">
           <video autoplay muted loop playsinline loading="lazy" class="project__preview"
@@ -149,7 +149,7 @@
     <hr class="separator">
 
     <section class="content section container page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-offset="1000">
+      data-aos-delay="1000">
       <figure>
         <img src="./assets/images/illustrations/usability.svg" alt="Web Developer" class="content__image"
           loading="lazy">
@@ -165,7 +165,7 @@
     </section>
 
     <section class="content content--reverse section container" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-offset="1000">
+      data-aos-delay="1000">
       <figure class="content__illustration">
         <img src="./assets/images/illustrations/startup.svg" alt="Web Developer" class="content__image" loading="lazy">
       </figure>
@@ -185,7 +185,7 @@
     <hr class="separator">
 
     <section class="contact container section page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-offset="1000">
+      data-aos-delay="1000">
       <article>
         <h2 class="contact__title">Let's talk</h2>
         <p class="contact__text">If you have an idea for a project or you just want to have a chat, please feel free to
