--- a/public/src/index.html
+++ b/public/src/index.html
@@ -4,6 +4,9 @@
 <head>
   <title>Web Developer - Bespoke Website Development | Louis Young</title>
   <meta name="theme-color" content="#4156d0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- SEO start. -->
   <meta name="description"
     content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
@@ -19,9 +22,6 @@
   <meta name="twitter:description"
     content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
   <!-- SEO end. -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Favicon start. -->
   <link rel="icon" type="image/x-icon" href="./assets/images/favicons/favicon.ico?v=1.1.0">
   <!-- Favicon end. -->
@@ -118,30 +118,30 @@
 
     <section class="projects section container page__section" data-aos="fade-up" data-aos-duration="2000"
       data-aos-delay="1000">
-      <article class="project">
+      <figure class="project">
         <a href="#!" class="project__link">
-          <video autoplay muted loop playsinline loading="lazy" class="project__preview"
+          <video autoplay muted loop playsinline class="project__preview"
             src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-concept-full.mp4"></video>
         </a>
-      </article>
-      <article class="project">
+      </figure>
+      <figure class="project">
         <a href="#!" class="project__link">
-          <video autoplay muted loop playsinline loading="lazy" class="project__preview"
+          <video autoplay muted loop playsinline class="project__preview"
             src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-pro-multitasking.mp4"></video>
         </a>
-      </article>
-      <article class="project">
+      </figure>
+      <figure class="project">
         <a href="#!" class="project__link">
           <img loading="lazy" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
             alt="Web Developer" class="project__preview">
         </a>
-      </article>
-      <article class="project">
+      </figure>
+      <figure class="project">
         <a href="#!" class="project__link">
-          <video autoplay muted loop playsinline loading="lazy" class="project__preview"
+          <video autoplay muted loop playsinline class="project__preview"
             src="https://danielkorpai.com/dist/img/dribbble/photography-portfolio-concept.mp4"></video>
         </a>
-      </article>
+      </figure>
     </section>
 
     <hr class="anchor" id="about">
@@ -207,10 +207,9 @@
 
   <footer class="footer">
     <section class="footer__layout container">
-      <article>
-        <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
-            class="logo__text logo__text--light">Young</span></a>
-      </article>
+      <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
+          class="logo__text logo__text--light">Young</span></a>
+
       <article class="socials">
         <a href="//github.com/louis-young"><img src="./assets/images/icons/socials/github.svg" alt="Github"
             class="socials__icon"></a>
@@ -224,17 +223,15 @@
 
   <section class="fallback">
     <article class="fallback__content container">
-      <a href="/" class="fallback__logo">
-        <figure>
-          <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
-              class="logo__text logo__text--light">Young</span></a>
-        </figure>
-      </a>
+      <figure>
+        <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
+            class="logo__text logo__text--light">Young</span></a>
+      </figure>
 
       <p class="fallback__text">You are currently using an outdated browser.</p>
       <p class="fallback__text">Please consider using a modern browser such as one listed below:</p>
 
-      <div class="browsers">
+      <section class="browsers">
         <a href="//www.google.com/chrome/" target="_blank" rel="noopener" class="browser">
           <img src="./assets/images/icons/browsers/chrome.svg" alt="Google Chrome">
           <p class="browser__title">Google Chrome</p>
@@ -247,16 +244,15 @@
           <img src="./assets/images/icons/browsers/firefox.svg" alt="Mozilla Firefox">
           <p class="browser__title">Mozilla Firefox</p>
         </a>
-      </div>
+      </section>
     </article>
   </section>
 
   <!-- Scripts start. -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@2.6.4/lib/bodyScrollLock.min.js"
-    integrity="sha256-Jhm98OCp15t0/tE4nKLT2mHwgYgTt2wxpiZFn4PV1Iw=" crossorigin="anonymous"
-    type="text/javascript"></script>
-  <script src="./scripts/bundle.min.js?v=1.0.0" type="text/javascript"></script>
+    integrity="sha256-Jhm98OCp15t0/tE4nKLT2mHwgYgTt2wxpiZFn4PV1Iw=" crossorigin="anonymous"></script>
+  <script src="./scripts/bundle.min.js?v=1.0.0"></script>
   <!-- Scripts end. -->
 </body>
 
