Adding mobile menu functionallity

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -62,11 +62,11 @@
           <li class="navigation__item"><a href="#work" class="navigation__link header__link">Work</a></li>
           <li class="navigation__item"><a href="#about" class="navigation__link header__link">About</a></li>
         </ul>
-        <a href="#contact" class="header__button header__button--small button">Contact</a>
+        <a href="#contact" class="header__button header__button--small header__link button">Contact</a>
       </nav>
 
       <article class="header__item header__item--right">
-        <a href="#contact" class="header__link header__button header__button--large button">Contact</a>
+        <a href="#contact" class="header__button header__button--large button">Contact</a>
       </article>
     </section>
   </header>
