--- a/public/src/index.html
+++ b/public/src/index.html
@@ -2,6 +2,38 @@
 <html lang="en">
 
 <head>
+  <title>Web Developer - Bespoke Website Development | Louis Young</title>
+  <meta name="theme-color" content="#4156d0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- SEO start. -->
+  <meta name="description"
+    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+  <link rel="canonical" href="https://www.louisyoung.co.uk">
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young">
+  <meta property="og:title" content="Louis Young - Web Developer">
+  <meta property="og:url" content="https://www.louisyoung.co.uk">
+  <meta property="og:description"
+    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+  <meta property="og:image"
+    content="https://www.louisyoung.co.uk/assets/images/illustrations/full-stack-web-developer.svg">
+  <meta name="twitter:site" content="https://www.louisyoung.co.uk">
+  <meta name="twitter:title" content="Louis Young - Web Developer">
+  <meta name="twitter:url" content="https://www.louisyoung.co.uk">
+  <meta name="twitter:description"
+    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+  <meta name="twitter:image"
+    content="https://www.louisyoung.co.uk/assets/images/illustrations/full-stack-web-developer.svg">
+  <!-- SEO end. -->
+  <!-- Favicon start. -->
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicons/favicon.ico?v=1.1.0">
+  <!-- Favicon end. -->
+  <!-- Stylesheets start. -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="./stylesheets/main.min.css?v=1.0.0" type="text/css">
+  <!-- Stylesheets end. -->
   <!-- Google Analytics start. -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158823595-1"></script>
   <script>
@@ -12,33 +44,20 @@
     gtag('config', 'UA-158823595-1');
   </script>
   <!-- Google Analytics end. -->
-  <title>Web Developer - Bespoke Website Development | Louis Young</title>
-  <meta name="theme-color" content="#4156d0">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- SEO start. -->
-  <meta name="description"
-    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
-  <link rel="canonical" href="https://www.louisyoung.co.uk">
-  <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young">
-  <meta property="og:title" content="Louis Young - Web Developer">
-  <meta property="og:url" content="https://www.louisyoung.co.uk">
-  <meta property="og:description"
-    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
-  <meta name="twitter:site" content="https://www.louisyoung.co.uk">
-  <meta name="twitter:title" content="Louis Young - Web Developer">
-  <meta name="twitter:url" content="https://www.louisyoung.co.uk">
-  <meta name="twitter:description"
-    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
-  <!-- SEO end. -->
-  <!-- Favicon start. -->
-  <link rel="icon" type="image/x-icon" href="./assets/images/favicons/favicon.ico?v=1.1.0">
-  <!-- Favicon end. -->
-  <!-- Stylesheets start. -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="./stylesheets/main.min.css?v=1.0.0" type="text/css">
-  <!-- Stylesheets end. -->
+  <!-- Schema start. -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://www.louisyoung.co.uk",
+      "sameAs": [
+          "https://twitter.com/louisryoungg",
+          "https://www.linkedin.com/in/louis-r-young/",
+          "https://github.com/louis-young"
+      ]
+  }
+  </script>
+  <!-- Schema end. -->
 </head>
 
 <body class="page">
@@ -74,8 +93,10 @@
   <main>
     <section class="introduction page__section">
       <article class="introduction__layout container" data-aos="zoom-in-up" data-aos-duration="2000">
+
         <article class="introduction__content">
           <h1 class="introduction__title">Web Developer</h1>
+
           <p class="introduction__content">Currently developing clean, modern, responsive, scalable and performant
             websites and
             applications at <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow" class="link">Fluid
@@ -83,7 +104,9 @@
           </p>
           <a href="#work" class="button">See my Work</a>
         </article>
-        <img src="./assets/images/illustrations/proud.svg" alt="Web Developer" class="introduction__illustration">
+
+        <img src="./assets/images/illustrations/full-stack-web-developer.svg" alt="Full Stack Web Developer"
+          class="introduction__illustration">
       </article>
     </section>
 
@@ -97,18 +120,18 @@
 
         <article class="skills__layout">
           <article class="skill">
-            <h3 class="skill__title">Performance</h3>
+            <h3 class="skill__title">Performant</h3>
             <p class="skill__text">Time is of the essence, so having a lightning fast website or application is vital to
               success.</p>
           </article>
 
           <article class="skill">
-            <h3 class="skill__title">Efficiency</h3>
+            <h3 class="skill__title">Efficient</h3>
             <p class="skill__text">Making optimal use of my time and being efficient when working is key.</p>
           </article>
 
           <article class="skill">
-            <h3 class="skill__title">Responsiveness</h3>
+            <h3 class="skill__title">Responsive</h3>
             <p class="skill__text">Every website and application needs to look great on every device, regardless of
               size.</p>
           </article>
@@ -118,6 +141,7 @@
             <p class="skill__text">Writing clean, scalable and modular code is of the highest importance.
             </p>
           </article>
+
         </article>
       </article>
     </section>
@@ -128,30 +152,35 @@
 
     <section class="projects section container page__section" data-aos="fade-up" data-aos-duration="2000"
       data-aos-delay="1000">
+
       <figure class="project">
         <a href="#!" class="project__link">
           <video autoplay muted loop playsinline class="project__preview"
             src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-concept-full.mp4"></video>
         </a>
       </figure>
+
       <figure class="project">
         <a href="#!" class="project__link">
           <video autoplay muted loop playsinline class="project__preview"
             src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-pro-multitasking.mp4"></video>
         </a>
       </figure>
+
       <figure class="project">
         <a href="#!" class="project__link">
           <img loading="lazy" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
-            alt="Web Developer" class="project__preview">
+            alt="Web Development Project" class="project__preview">
         </a>
       </figure>
+
       <figure class="project">
         <a href="#!" class="project__link">
           <video autoplay muted loop playsinline class="project__preview"
             src="https://danielkorpai.com/dist/img/dribbble/photography-portfolio-concept.mp4"></video>
         </a>
       </figure>
+
     </section>
 
     <hr class="anchor" id="about">
@@ -160,33 +189,52 @@
 
     <section class="content section container page__section" data-aos="fade-up" data-aos-duration="2000"
       data-aos-delay="1000">
+
       <figure>
-        <img src="./assets/images/illustrations/usability.svg" alt="Web Developer" class="content__image"
-          loading="lazy">
+        <img src="./assets/images/illustrations/website-developer-experience.svg" alt="Web Development and Design"
+          class="content__image" loading="lazy">
       </figure>
+
       <article class="content__content">
         <h2 class="content__title">Technologies</h2>
+
         <p class="content__text">I specialise in creating performant, responsive, secure and accessible websites and
           applications. </p>
+
         <p class="content__text">Technologies I'm comfortable working with include but are not limited to HTML5,
           CSS3, Sass,
-          JavaScript, React, PHP, MySQL, Docker, NPM, Git, Gulp, Webpack and the ability to learn others.</p>
+          JavaScript, React, Next, Node, PHP, MySQL, Docker, NPM, Git, Gulp, Webpack, CMS systems and
+          the ability to learn others.</p>
+
+        <p class="content__text">For more detail, please see my <a href="#!" class="link link--space">Curriculum
+            Vitae</a>.</p>
       </article>
     </section>
 
     <section class="content content--reverse section container" data-aos="fade-up" data-aos-duration="2000"
       data-aos-delay="1000">
+
       <figure class="content__illustration">
-        <img src="./assets/images/illustrations/startup.svg" alt="Web Developer" class="content__image" loading="lazy">
+        <img src="./assets/images/illustrations/web-design-development.svg" alt="Website Developer Experience"
+          class="content__image" loading="lazy">
       </figure>
+
       <article class="content__content">
         <h2 class="content__title">Experience</h2>
+
         <p class="content__text">I have experience working as an industry professional and am an excellent communicator
-          having in teams
+          having worked in teams
           with knowledge of Windows
-          and Linux, FTP, SSH, servers, hosting, domains, DNS, APIs and more.</p>
+          and Linux (including technical knowledge / support), FTP, SSH, web servers, hosting & domains, DNS, APIs,
+          UI/UX,
+          technical SEO , Google Analytics, customer
+          service / communications and more.</p>
+
         <p class="content__text">I am also practiced in using industry leading applications such as Slack, Asana, Visual
           Studio Code, Adobe XD, Postman, 1Password and more.</p>
+
+        <p class="content__text">For more detail, please see my <a href="#!" class="link link--space">Curriculum
+            Vitae</a>.</p>
       </article>
     </section>
 
@@ -198,10 +246,14 @@
       data-aos-delay="1000">
       <article>
         <h2 class="contact__title">Let's talk</h2>
+
         <p class="contact__text">If you have an idea for a project or you just want to have a chat, please feel free to
           get in touch with me to see how I can benefit your business.</p>
+
         <p class="contact__text">I'm always open to new opportunities, so if you would like to find about more about me
-          in a professional capacity, please get in touch via any of the methods on my website. Alternatively, send me
+          in a professional capacity please get in touch via any of the methods on my website.</p>
+
+        <p class="contact__text"> Alternatively, send me
           an email at <a href="mailto:me@louisyoung.co.uk" class="link">me@louisyoung.co.uk</a>.</p>
       </article>
 
@@ -209,6 +261,7 @@
         <input type="text" name="name" placeholder="Name" class="form__input" required>
         <input type="email" name="email" placeholder="Email" class="form__input" required>
         <textarea name="enquiry" class="form__input form__input--text" placeholder="Enquiry"></textarea>
+
         <button class="form__submit button" type="submit">Send</button>
       </form>
     </section>
