--- a/public/src/index.html
+++ b/public/src/index.html
@@ -202,7 +202,7 @@
           applications. </p>
 
         <p class="content__text">Technologies I'm comfortable working with include but are not limited to HTML5,
-          CSS3, Sass,
+          CSS3, Sass (BEM),
           JavaScript, React, Next, Node, PHP, MySQL, Docker, NPM, Git, Gulp, Webpack, CMS systems and
           the ability to learn others.</p>
 
@@ -228,7 +228,7 @@
           and Linux (including technical knowledge / support), FTP, SSH, web servers, hosting & domains, DNS, APIs,
           UI/UX,
           technical SEO , Google Analytics, customer
-          service / communications and more.</p>
+          service / communications, writing documentation and more.</p>
 
         <p class="content__text">I am also practiced in using industry leading applications such as Slack, Asana, Visual
           Studio Code, Adobe XD, Postman, 1Password and more.</p>
