Adding pill lists

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -201,9 +201,23 @@
         <p class="content__text">I specialise in creating performant, responsive, secure and accessible websites and
           applications. </p>
 
-        <p class="content__text">Technologies I'm comfortable working with include but are not limited to HTML5,
-          CSS3, Sass (BEM),
-          JavaScript, React, Next, Node, PHP, MySQL, Docker, NPM, Git, Gulp, Webpack, CMS systems and
+        <p class="content__text">Technologies I'm comfortable working with include but are not limited to <ul
+            class="skillsz">
+            <li class="skillz">HTML5</li>
+            <li class="skillz">CSS3</li>
+            <li class="skillz">Sass (BEM)</li>
+            <li class="skillz">JavaScript</li>
+            <li class="skillz">Next</li>
+            <li class="skillz">Node</li>
+            <li class="skillz">PHP</li>
+            <li class="skillz">MySQL</li>
+            <li class="skillz">Docker</li>
+            <li class="skillz">NPM</li>
+            <li class="skillz">Git</li>
+            <li class="skillz">Gulp</li>
+            <li class="skillz">Webpack</li>
+            <li class="skillz">CMS Systems</li>
+          </ul> and
           the ability to learn others.</p>
 
         <p class="content__text">For more detail, please see my <a href="#!" class="link link--space">Curriculum
@@ -224,11 +238,21 @@
 
         <p class="content__text">I have experience working as an industry professional and am an excellent communicator
           having worked in teams
-          with knowledge of Windows
-          and Linux (including technical knowledge / support), FTP, SSH, web servers, hosting & domains, DNS, APIs,
-          UI/UX,
-          technical SEO , Google Analytics, customer
-          service / communications, writing documentation and more.</p>
+          with knowledge of
+          <ul class="skillsz">
+            <li class="skillz">Windows & Linux</li>
+            <li class="skillz">FTP</li>
+            <li class="skillz">SSH</li>
+            <li class="skillz">Web Servers</li>
+            <li class="skillz">Hosting & Domains</li>
+            <li class="skillz">DNS</li>
+            <li class="skillz">APIs</li>
+            <li class="skillz">UI/UX</li>
+            <li class="skillz">Technical SEO</li>
+            <li class="skillz">Google Analytics</li>
+            <li class="skillz">Documentation</li>
+          </ul>
+          and more.</p>
 
         <p class="content__text">I am also practiced in using industry leading applications such as Slack, Asana, Visual
           Studio Code, Adobe XD, Postman, 1Password and more.</p>
