--- a/public/src/index.html
+++ b/public/src/index.html
@@ -243,7 +243,7 @@
             <li class="skillz">Windows & Linux</li>
             <li class="skillz">FTP</li>
             <li class="skillz">SSH</li>
-            <li class="skillz">Web Servers</li>
+            <li class="skillz">Servers</li>
             <li class="skillz">Hosting & Domains</li>
             <li class="skillz">DNS</li>
             <li class="skillz">APIs</li>
