--- a/public/src/index.html
+++ b/public/src/index.html
@@ -120,26 +120,28 @@
 
         <article class="skills__layout">
           <article class="skill">
-            <h3 class="skill__title">Performant</h3>
-            <p class="skill__text">Time is of the essence, so having a lightning fast website or application is vital to
-              success.</p>
-          </article>
-
-          <article class="skill">
-            <h3 class="skill__title">Efficient</h3>
-            <p class="skill__text">Making optimal use of my time and being efficient when working is key.</p>
-          </article>
-
-          <article class="skill">
             <h3 class="skill__title">Responsive</h3>
-            <p class="skill__text">Every website and application needs to look great on every device, regardless of
-              size.</p>
+            <p class="skill__text">I think about how usable an interface is before developing it and offer insightful
+              suggestions when suitable.
+            </p>
           </article>
 
           <article class="skill">
-            <h3 class="skill__title">Code</h3>
-            <p class="skill__text">Writing clean, scalable and modular code is of the highest importance.
-            </p>
+            <h3 class="skill__title">Fast</h3>
+            <p class="skill__text">I leverage modern technologies and applications to speed up my already efficient
+              development process.</p>
+          </article>
+
+          <article class="skill">
+            <h3 class="skill__title">Profitable</h3>
+            <p class="skill__text">I ensure every website and application and their contents is secure, regardless of
+              size or reputation.</p>
+          </article>
+
+          <article class="skill">
+            <h3 class="skill__title">Secure</h3>
+            <p class="skill__text">I am aware of how important speed is, so every website or application needs to be
+              lightning fast.</p>
           </article>
 
         </article>
@@ -202,26 +204,27 @@
           applications. </p>
 
         <p class="content__text">Technologies I'm comfortable working with include but are not limited to <ul
-            class="skillsz">
-            <li class="skillz">HTML5</li>
-            <li class="skillz">CSS3</li>
-            <li class="skillz">Sass (BEM)</li>
-            <li class="skillz">JavaScript</li>
-            <li class="skillz">Next</li>
-            <li class="skillz">Node</li>
-            <li class="skillz">PHP</li>
-            <li class="skillz">MySQL</li>
-            <li class="skillz">Docker</li>
-            <li class="skillz">NPM</li>
-            <li class="skillz">Git</li>
-            <li class="skillz">Gulp</li>
-            <li class="skillz">Webpack</li>
-            <li class="skillz">CMS Systems</li>
+            class="pills">
+            <li class="pill">HTML5</li>
+            <li class="pill">CSS3</li>
+            <li class="pill">Sass</li>
+            <li class="pill">BEM</li>
+            <li class="pill">JavaScript</li>
+            <li class="pill">JSON</li>
+            <li class="pill">Schema</li>
+            <li class="pill">Next</li>
+            <li class="pill">Node</li>
+            <li class="pill">PHP</li>
+            <li class="pill">MySQL</li>
+            <li class="pill">Apache</li>
+            <li class="pill">Docker</li>
+            <li class="pill">NPM</li>
+            <li class="pill">Git</li>
+            <li class="pill">Gulp</li>
+            <li class="pill">Webpack</li>
+            <li class="pill">CMS Systems</li>
           </ul> and
           the ability to learn others.</p>
-
-        <p class="content__text">For more detail, please see my <a href="#!" class="link link--space">Curriculum
-            Vitae</a>.</p>
       </article>
     </section>
 
@@ -239,26 +242,45 @@
         <p class="content__text">I have experience working as an industry professional and am an excellent communicator
           having worked in teams
           with knowledge of
-          <ul class="skillsz">
-            <li class="skillz">Windows & Linux</li>
-            <li class="skillz">FTP</li>
-            <li class="skillz">SSH</li>
-            <li class="skillz">Servers</li>
-            <li class="skillz">Hosting & Domains</li>
-            <li class="skillz">DNS</li>
-            <li class="skillz">APIs</li>
-            <li class="skillz">UI/UX</li>
-            <li class="skillz">Technical SEO</li>
-            <li class="skillz">Google Analytics</li>
-            <li class="skillz">Documentation</li>
+          <ul class="pills">
+            <li class="pill">Windows</li>
+            <li class="pill">Linux</li>
+            <li class="pill">Powershell</li>
+            <li class="pill">FTP</li>
+            <li class="pill">SSH</li>
+            <li class="pill">SSR</li>
+            <li class="pill">Servers</li>
+            <li class="pill">Hosting</li>
+            <li class="pill">Domains</li>
+            <li class="pill">DNS</li>
+            <li class="pill">APIs</li>
+            <li class="pill">CDNs</li>
+            <li class="pill">Caching</li>
+            <li class="pill">SSL</li>
+            <li class="pill">VPS</li>
+            <li class="pill">Security</li>
+            <li class="pill">Performance</li>
+            <li class="pill">Accessibility</li>
+            <li class="pill">Dedicated Servers</li>
+            <li class="pill">UI/UX</li>
+            <li class="pill">Technical SEO</li>
+            <li class="pill">Google Analytics</li>
+            <li class="pill">Remote Access</li>
+            <li class="pill">Documentation</li>
           </ul>
           and more.</p>
 
-        <p class="content__text">I am also practiced in using industry leading applications such as Slack, Asana, Visual
-          Studio Code, Adobe XD, Postman, 1Password and more.</p>
-
-        <p class="content__text">For more detail, please see my <a href="#!" class="link link--space">Curriculum
-            Vitae</a>.</p>
+        <p class="content__text">I am also practiced in using industry leading applications such as
+          <ul class="pills">
+            <li class="pill">Slack</li>
+            <li class="pill">Asana</li>
+            <li class="pill">Visual Studio Code</li>
+            <li class="pill">Adobe XD</li>
+            <li class="pill">Postman</li>
+            <li class="pill">Breathe</li>
+            <li class="pill">Xero</li>
+          </ul>
+          and more.</p>
       </article>
     </section>
 
